--- a/angular/filter/app/index.html
+++ b/angular/filter/app/index.html
@@ -16,13 +16,12 @@
 </head>
 <body>
   <ul class="menu">
-    <li><a href="#!/ngModel">ngModel</a></li>
-    <li><a href="#!/ngShow">ngShow</a></li>
-    <li><a href="#!/ngSwitch">ngSwitch</a></li>
-    <li><a href="#!/ngOption">ngOption</a></li>
-    <li><a href="#!/ngIf">ngIf</a></li>
-    <li><a href="#!/ngRepeat">ngRepeat</a></li>
-    <li><a href="#!/ngClass">ngClass</a></li>
+    <li><a href="#!/orderBy">orderBy</a></li>
+    <li><a href="#!/orderByClick">orderByClick</a></li>
+    <li><a href="#!/filter01">filter01</a></li>
+    <li><a href="#!/filter02">filter02</a></li>
+    <li><a href="#!/filter_orderby">filter_orderby</a></li>
+    <li><a href="#!/searchType">searchType</a></li>
   </ul>
 
   <!--[if lt IE 7]>
@@ -31,21 +30,18 @@
 
   <div ng-view></div>
 
-  <div>Angular seed app: v<span app-version></span></div>
-
   <!-- In production use:
   <script src="//ajax.googleapis.com/ajax/libs/angularjs/x.x.x/angular.min.js"></script>
   -->
   <script src="bower_components/angular/angular.js"></script>
   <script src="bower_components/angular-route/angular-route.js"></script>
   <script src="app.js"></script>
-  <script src="ngModel/ngModel.js"></script>
-  <script src="ngShow/ngShow.js"></script>
-  <script src="ngSwitch/ngSwitch.js"></script>
-  <script src="ngOption/ngOption.js"></script>
-  <script src="ngIf/ngIf.js"></script>
-  <script src="ngRepeat/ngRepeat.js"></script>
-  <script src="ngClass/ngClass.js"></script>
+  <script src="orderBy/orderBy.js"></script>
+  <script src="orderByClick/orderByClick.js"></script>
+  <script src="filter01/filter01.js"></script>
+  <script src="filter02/filter02.js"></script>
+  <script src="filter_orderby/filter_orderby.js"></script>
+  <script src="searchType/searchType.js"></script>
   <script src="components/version/version.js"></script>
   <script src="components/version/version-directive.js"></script>
   <script src="components/version/interpolate-filter.js"></script>
