--- a/angular/merge/public/angular/userPage/index/index.html
+++ b/angular/merge/public/angular/userPage/index/index.html
@@ -1,2 +1,43 @@
-<h1>This is userPage Index</h1>
-<%= JSON.stringify(session)%>
+<div class="container">
+	<div class="admin_wrapper">
+		<table border="1px solid black">
+			<thead>
+				<tr>
+					<th>No</th>
+					<th>이름</th>
+					<th>설명</th>
+				</tr>
+			</thead>
+			<tbody>
+				<tr>
+					<td>1</td>
+					<td>admin-page1</td>
+					<td>admin-page1</td>
+				</tr>
+			</tbody>
+		</table>	
+	</div>	
+	<div class="guest_wrapper">
+		<table border="1px solid black">
+			<thead>
+				<tr>
+					<th>No</th>
+					<th>이름</th>
+					<th>설명</th>
+				</tr>
+			</thead>
+			<tbody>
+				<tr>
+					<td>1</td>
+					<td>admin-page1</td>
+					<td>admin-page1</td>
+				</tr>
+			</tbody>
+		</table>	
+	</div>
+	<div class="notification_wrapper">
+		<table>
+			
+		</table>
+	</div>
+</div>
